--- a/校园旧货交易登记系统/Site.Master
+++ b/校园旧货交易登记系统/Site.Master
@@ -41,19 +41,13 @@
 
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" runat="server" href="~/">应用程序名称</a>
-                </div>
+                
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">主页</a></li>
-                        <li><a runat="server" href="~/About">关于</a></li>
-                        <li><a runat="server" href="~/Contact">联系方式</a></li>
+                        <li><a runat="server" href="~/Contact">登录</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav">
+                        <li><a runat="server" href="register.aspx">注册</a></li>
                     </ul>
                 </div>
             </div>
